
[package]
name = "nanoda_lib"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ammkrn/nanoda_lib"
description = "A type checker for the Lean 4 programming language and theorem prover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level=3
overflow-checks=true
lto=true

[profile.test]
opt-level=2
overflow-checks=true

[dev-dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }

[dependencies]
indexmap = "2.0.0"
rustc-hash = "1.1.0"
num-bigint = "0.4.4"
num-integer = "0.1.46"
num-traits = "0.2.17"
serde_json = "1.0.111"

[[bin]]
name = "nanoda_bin"
path = "src/main.rs"
bench = false