[package]
name = "nanoda_lib"
version = "0.2.0-t"
authors = ["ammkrn <ammkrn@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.3.2"
rustc-hash = "1.1.0"
nanoda_macros = { path = "../nanoda_macros" }
