[package]
name = "nanoda_macros"
version = "0.2.1-t"
authors = ["ammkrn <ammkrn@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
once_cell = "1.4.0"
quote = "1.0.2"
syn = { version = "1.0.7", features = ["full", "extra-traits", "parsing"] }
